2018-02-03 (0.12.13)
	COMMON: UNITPATH replaced with SBASICPATH which also works for modules

2018-02-03 (0.12.13)
	COMMON: modules refresh

2018-02-03 (0.12.12)
	COMMON: restore 6d array handling
	COMMON: increase default stack size

2018-01-13 (0.12.12)
	Fix osx crash

2017-11-28 (0.12.11)
	Fix img.save(dat) to build correct indexes
	Fix ESCm implementation bug
	Implements ESC<n ESC>n back screen handlers

2017-11-28 (0.12.10)
	Released 82f865d61a6eba1c017b8a58e1c892f1b7d6a0c0

2017-11-28 (0.12.10)
	COMMON: owner strings

2017-11-28 (0.12.10)
	COMMON: Fix some coverty warnings

2017-11-17 (0.12.10)
	SDL: Fix debugger display issue

2017-11-08 (0.12.10)
	UI: Added ALT+= command
	UI: Update ALT+. to work with error handling

2017-11-04 (0.12.10)
	COMMON: update png and editor libs
	UI: save and restore export settings
	UI: add missing 'Select All' menu option
	ANDROID: add missing key mappings for DEL,ESC,HOME,BRK,FN(1-12)
	ANDROID: handle screen rotation

2017-10-28 (0.12.10)
	COMMON: optimise method call access

2017-10-27 (0.12.10)
	COMMON: removed experimental reference variable concept

2017-10-25 (0.12.10)
	COMMON: optimise byref let

2017-10-21 (0.12.10)
	COMMON: optimise array handling

2017-10-19 (0.12.10)
	COMMON: fix win32 run regression

2017-10-17 (0.12.10)
	COMMON: performance optimisations

2017-10-07 (0.12.10)
	COMMON: Fix var scope errors reported by cppcheck
	COMMON: dirwalk callback now provides properties path,name,depth,mtime,size,dir
	UI: shell now displays size and date columns

2017-09-30 (0.12.10)
	COMMON: Update var cache handling to use free-list

2017-09-23 (0.12.10)
	ANDROID: Fix crash when displaying an alert with extended ascii chars
	ANDROID: Fix forward scolling issue

2017-09-22 (0.12.10)
	SDL: Fix cursor error position when running from selected text

2017-09-09 (0.12.10)
	SDL: Moved "Live edit" mode to editor via F8 key

2017-09-06 (0.12.10)
	COMMON: fix handling for code array passed as function argument

2017-09-03 (0.12.10)