@@ -1,3 +1,6 @@
+2018-03-08 (0.12.13)
+	COMMON: Fix TLOAD input error handling
+
 2018-02-03 (0.12.13)
 	COMMON: UNITPATH replaced with SBASICPATH which also works for modules
 
